--- a/tfsc-ghpages-site/tsconfig.app.json
+++ b/tfsc-ghpages-site/tsconfig.app.json
@@ -4,7 +4,7 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
-    "baseUrl": ".",
+    "baseUrl": "/bookish-octo-guide/",
     "paths": {
       "@/*": ["./src/*"]
     }
