--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,7 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
-    "baseUrl": "/bookish-octo-guide/",
+    "baseUrl": "/",
     "paths": {
       "@/*": ["./src/*"]
     }
